# lang-boot

./: .gitignore  README.md
pyboot/: .coverage  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
pyboot/.github/: PULL_REQUEST_TEMPLATE.md
pyboot/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
pyboot/docs/: backlog.md  framework-backlog.md  overview.md
pyboot/docs/3-design/: architecture.md
pyboot/docs/4-development/: developer-guide.md
pyboot/docs/templates/: README.md  framework-doc-template.md  module-overview-template.md
pyboot/examples/: async_example.py  cli_example.py  compress_example.py  debug_example.py  decorators_example.py  error_example.py  fileio_example.py  parsing_example.py  ratelimit_example.py  run_example.py  toolchain_example.py  uuid_example.py  web_example.py
pyboot/src/dev/: __init__.py
pyboot/src/dev/engineeringlabs/: __init__.py
pyboot/src/test/: __init__.py  test_cli.py  test_fileio.py  test_ratelimit.py  test_uuid.py  test_web.py
rustboot/: .clippy.toml  .typos.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  libtest_clippy.rlib  test_clippy.rs
rustboot/benches/: framework_benchmarks.rs
rustboot/crates/rustboot-async/: Cargo.toml  README.md  backlog.md
rustboot/crates/rustboot-async/doc/: overview.md
rustboot/crates/rustboot-async/examples/: async_basic.rs
rustboot/crates/rustboot-async/src/: error.rs  lib.rs  spawn.rs  timeout_pool.rs
rustboot/crates/rustboot-async/tests/: integration.rs
rustboot/crates/rustboot-cache/: Cargo.toml  backlog.md
rustboot/crates/rustboot-cache/doc/: overview.md
rustboot/crates/rustboot-cache/examples/: basic_caching.rs
rustboot/crates/rustboot-cache/src/: cache.rs  lib.rs  mod.rs
rustboot/crates/rustboot-cache/tests/: integration.rs  property_tests.proptest-regressions  property_tests.rs
rustboot/crates/rustboot-cli/: Cargo.toml  DEVELOPMENT.md  FILE_STRUCTURE.md  README.md  USAGE_EXAMPLES.md
rustboot/crates/rustboot-cli/src/: main.rs
rustboot/crates/rustboot-compress/: Cargo.toml  README.md  backlog.md
rustboot/crates/rustboot-config/: Cargo.toml  README.md  backlog.md
rustboot/crates/rustboot-crypto/: Cargo.toml  README.md  backlog.md
rustboot/crates/rustboot-database/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  SQLX_DRIVER_README.md  backlog.md
rustboot/crates/rustboot-datetime/: Cargo.toml  README.md  backlog.md
rustboot/crates/rustboot-debug/: Cargo.toml  README.md
rustboot/crates/rustboot-di/: Cargo.toml  backlog.md
rustboot/crates/rustboot-error/: Cargo.toml
rustboot/crates/rustboot-fileio/: Cargo.toml  README.md  backlog.md
rustboot/crates/rustboot-health/: Cargo.toml  IMPLEMENTATION.md  backlog.md
rustboot/crates/rustboot-http/: Cargo.toml  backlog.md
rustboot/crates/rustboot-macros/: Cargo.toml  README.md  SYN_2_MIGRATION.md
rustboot/crates/rustboot-messaging/: Cargo.toml  README.md  backlog.md
rustboot/crates/rustboot-middleware/: Cargo.toml  HTTP_LOGGING.md  RATELIMIT.md  backlog.md
rustboot/crates/rustboot-observability/: Cargo.toml  backlog.md
rustboot/crates/rustboot-openapi/: Cargo.toml  IMPLEMENTATION.md  README.md
rustboot/crates/rustboot-parsing/: Cargo.toml
rustboot/crates/rustboot-ratelimit/: Cargo.toml  README.md  backlog.md
rustboot/crates/rustboot-resilience/: Cargo.toml  README.md  backlog.md
rustboot/crates/rustboot-security/: Cargo.toml  README.md  backlog.md
rustboot/crates/rustboot-serialization/: Cargo.toml  README.md  backlog.md
rustboot/crates/rustboot-session/: ARCHITECTURE.md  Cargo.toml  README.md
rustboot/crates/rustboot-state-machine/: Cargo.toml  EXAMPLES.md  backlog.md
rustboot/crates/rustboot-streams/: Cargo.toml
rustboot/crates/rustboot-toolchain/: Cargo.toml  backlog.md
rustboot/crates/rustboot-uuid/: Cargo.toml  README.md  backlog.md  rust-toolchain.toml
rustboot/crates/rustboot-validation/: Cargo.toml  backlog.md
rustboot/crates/rustboot-web/: Cargo.toml  README.md
rustboot/docker/: .dockerignore  .env.example  .github-workflows-example.yml  00-START-HERE.md  ARCHITECTURE.md  CHEATSHEET.md  Dockerfile.builder  Dockerfile.runtime  INDEX.md  Makefile  QUICK_START.md  README.md  SUMMARY.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  healthcheck.sh  nginx.conf
rustboot/docker/config/: app.toml
rustboot/docker/init-scripts/: 01-init.sql
rustboot/docs/: DOCUMENTATION_AUDIT.md  DOCUMENTATION_COMPLIANCE_2025-12-23.md  backlog.md  framework-backlog.md  migration-guides.md  overview.md  production-checklist.md  security-best-practices.md  security-guide.md
rustboot/docs/0-ideation/: README.md  rustboot_extraction_guide.md  rustboot_extraction_plan.md
rustboot/docs/3-design/: architecture.md  security-audit.md  security-overview.md
rustboot/docs/4-development/: developer-guide.md
rustboot/docs/6-deployment/: README.md
rustboot/docs/adr/: 0001-use-async-trait.md  0002-modular-crate-structure.md  0003-trait-based-abstractions.md  0004-error-handling-strategy.md  0005-axum-as-web-framework.md  0006-sqlx-as-database-driver.md  README.md
rustboot/docs/templates/: FLOW_DOCUMENTATION_SUMMARY.md  FRAMEWORK.md  GOVERNANCE_ABSTRACTION_SUMMARY.md  README.md  TEMPLATE_UPDATE_SUMMARY.md  crate-overview-template.md
rustboot/examples/e2e-app/: Cargo.toml  README.md
rustboot/examples/full_application/: .env.example  ARCHITECTURE.md  Cargo.toml  QUICKSTART.md  README.md  test_api.sh
rustboot/k8s/: README.md
rustboot/k8s/base/: configmap.yaml  deployment.yaml  kustomization.yaml  service.yaml
rustboot/monitoring/: README.md  docker-compose.yml
rustboot/monitoring/alertmanager/: alertmanager.yml
rustboot/monitoring/grafana/: datasources.yml
rustboot/monitoring/loki/: loki-config.yml  promtail-config.yml
rustboot/monitoring/prometheus/: prometheus.yml
rustboot/rustboot/: Cargo.toml
rustboot/rustboot/src/: lib.rs
rustboot/tests/: cache_integration.rs  di_integration.rs  middleware_integration.rs  observability_integration.rs  state_machine_integration.rs  validation_integration.rs
(+969 files in other folders)
