[project]
name = "pyboot"
version = "0.1.0"
description = "Python Infrastructure Framework - Foundation Utilities for Production Applications"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Software Engineering Labs", email = "dev@engineeringlab.dev" }
]
keywords = [
    "framework",
    "infrastructure", 
    "resilience",
    "observability",
    "dependency-injection",
    "configuration",
    "health-checks",
    "circuit-breaker",
    "rate-limiting",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]

# Core dependencies (minimal)
dependencies = [
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
# Async utilities
async = ["anyio>=4.0.0"]

# HTTP client
http = ["httpx>=0.27.0"]

# Cache backends
redis = ["redis>=5.0.0"]

# Database support
database = [
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
]

# Messaging
messaging = ["aio-pika>=9.0.0"]

# Observability
logging = ["structlog>=24.0.0"]
metrics = ["prometheus-client>=0.20.0"]
tracing = [
    "opentelemetry-api>=1.0.0",
    "opentelemetry-sdk>=1.0.0",
]
observability = [
    "pyboot[logging,metrics,tracing]",
]

# Full installation
full = [
    "pyboot[async,http,redis,database,messaging,observability]",
]

# Development dependencies
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.18.0",
    "ruff>=0.14.0",
    "black>=25.0.0",
    "pre-commit>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/phd-systems/pyboot"
Documentation = "https://pyboot.dev/docs"
Repository = "https://github.com/phd-systems/pyboot"

# =============================================================================
# UV Workspace Configuration
# =============================================================================

[tool.uv]
required-version = ">=0.5.0"
dev-dependencies = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.18.0",
    "ruff>=0.14.0",
    "black>=25.0.0",
    "pre-commit>=4.0.0",
]

[tool.uv.workspace]
members = ["src/dev/engineeringlabs/pyboot"]

[tool.uv.sources]
# All modules are part of the pyboot package

# =============================================================================
# Build System
# =============================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dev"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

# =============================================================================
# Tool Configurations
# =============================================================================

[tool.pytest.ini_options]
# Co-located tests: tests live alongside source code
testpaths = ["src/dev/engineeringlabs/pyboot"]
pythonpath = ["src"]
python_files = "test_*.py"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["tests", "build", "dist"]

[[tool.mypy.overrides]]
module = [
    "httpx.*",
    "redis.*",
    "sqlalchemy.*",
    "prometheus_client.*",
    "opentelemetry.*",
    "structlog.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
    "ARG001", # unused function argument
    "ARG002", # unused method argument
]

[tool.ruff.lint.isort]
known-first-party = ["dev"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.coverage.run]
source = ["src/main"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@abstractmethod",
]
