[package]
name = "dev-engineeringlabs-rustboot"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Application framework for Rust with validation, caching, DI, and more"
readme = "../README.md"
keywords = ["framework", "validation", "cache", "di"]
categories = ["development-tools"]

[dependencies]
# Core crates (always included)
dev-engineeringlabs-rustboot-validation = { version = "0.1", path = "../crates/rustboot-validation" }
dev-engineeringlabs-rustboot-cache = { version = "0.1", path = "../crates/rustboot-cache" }
dev-engineeringlabs-rustboot-di = { version = "0.1", path = "../crates/rustboot-di" }
dev-engineeringlabs-rustboot-state-machine = { version = "0.1", path = "../crates/rustboot-state-machine" }
dev-engineeringlabs-rustboot-http = { version = "0.1", path = "../crates/rustboot-http" }
dev-engineeringlabs-rustboot-messaging = { version = "0.1", path = "../crates/rustboot-messaging" }
dev-engineeringlabs-rustboot-database = { version = "0.1", path = "../crates/rustboot-database" }
dev-engineeringlabs-rustboot-middleware = { version = "0.1", path = "../crates/rustboot-middleware" }
dev-engineeringlabs-rustboot-observability = { version = "0.1", path = "../crates/rustboot-observability" }

# Additional crates (feature-gated)
dev-engineeringlabs-rustboot-config = { version = "0.1", path = "../crates/rustboot-config", optional = true }
dev-engineeringlabs-rustboot-resilience = { version = "0.1", path = "../crates/rustboot-resilience", optional = true }
dev-engineeringlabs-rustboot-ratelimit = { version = "0.1", path = "../crates/rustboot-ratelimit", optional = true }
dev-engineeringlabs-rustboot-serialization = { version = "0.1", path = "../crates/rustboot-serialization", optional = true }
dev-engineeringlabs-rustboot-security = { version = "0.1", path = "../crates/rustboot-security", optional = true }
dev-engineeringlabs-rustboot-async = { version = "0.1", path = "../crates/rustboot-async", optional = true }
dev-engineeringlabs-rustboot-fileio = { version = "0.1", path = "../crates/rustboot-fileio", optional = true }
dev-engineeringlabs-rustboot-compress = { version = "0.1", path = "../crates/rustboot-compress", optional = true }
dev-engineeringlabs-rustboot-crypto = { version = "0.1", path = "../crates/rustboot-crypto", optional = true }
dev-engineeringlabs-rustboot-datetime = { version = "0.1", path = "../crates/rustboot-datetime", optional = true }
dev-engineeringlabs-rustboot-uuid = { version = "0.1", path = "../crates/rustboot-uuid", optional = true }
dev-engineeringlabs-rustboot-streams = { version = "0.1", path = "../crates/rustboot-streams", optional = true }

[features]
default = []

# Full feature - includes all optional crates
full = [
    "config",
    "resilience",
    "ratelimit",
    "serialization",
    "security",
    "async",
    "fileio",
    "compress",
    "crypto",
    "datetime",
    "uuid",
    "streams",
]

# Individual feature flags
config = ["dep:dev-engineeringlabs-rustboot-config"]
resilience = ["dep:dev-engineeringlabs-rustboot-resilience"]
ratelimit = ["dep:dev-engineeringlabs-rustboot-ratelimit"]
serialization = ["dep:dev-engineeringlabs-rustboot-serialization"]
security = ["dep:dev-engineeringlabs-rustboot-security"]
async = ["dep:dev-engineeringlabs-rustboot-async"]
fileio = ["dep:dev-engineeringlabs-rustboot-fileio"]
compress = ["dep:dev-engineeringlabs-rustboot-compress"]
crypto = ["dep:dev-engineeringlabs-rustboot-crypto"]
datetime = ["dep:dev-engineeringlabs-rustboot-datetime"]
uuid = ["dep:dev-engineeringlabs-rustboot-uuid"]
streams = ["dep:dev-engineeringlabs-rustboot-streams"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
criterion = { workspace = true }

[[bench]]
name = "framework_benchmarks"
harness = false
path = "../benches/framework_benchmarks.rs"
