[package]
name = "rustboot-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CLI tool for scaffolding rustboot projects"
keywords = ["cli", "scaffolding", "generator"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "rustboot"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
