[package]
name = "dev-engineeringlabs-rustboot-compress"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Compression utilities: gzip and zstd"
keywords = ["compression", "gzip", "zstd"]
categories = ["compression"]

[dependencies]
flate2 = "1.0"
zstd = "0.13"
thiserror = { workspace = true }
