[package]
name = "dev-engineeringlabs-rustboot-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Configuration management with YAML, TOML, JSON, and ENV support"
keywords = ["config", "configuration", "settings"]
categories = ["config"]

[dependencies]
rustboot-macros = { path = "../rustboot-macros" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
toml = "0.8"
thiserror = { workspace = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
tempfile = "3.0"
