[package]
name = "dev-engineeringlabs-rustboot-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Cryptography utilities: hashing and password encryption"
keywords = ["crypto", "hash", "bcrypt"]
categories = ["cryptography"]

[dependencies]
sha2 = "0.10"
hmac = "0.12"
bcrypt = "0.15"
thiserror = { workspace = true }
