[package]
name = "dev-engineeringlabs-rustboot-database"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Database abstraction with CRUD and transactions"
keywords = ["database", "orm"]
categories = ["database"]

[dependencies]
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time", "fs"] }
chrono = "0.4"

# Connection pooling (deadpool is default, bb8 is optional)
deadpool = { version = "0.12", optional = true }
bb8 = { version = "0.8", optional = true }

# SQLx support (optional)
sqlx = { version = "0.8", features = ["runtime-tokio"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "time", "macros", "rt-multi-thread"] }

[features]
default = ["deadpool"]
pool-deadpool = ["deadpool"]
pool-bb8 = ["bb8"]

# SQLx driver support with different database backends
sqlx-postgres = ["sqlx", "sqlx/postgres"]
sqlx-mysql = ["sqlx", "sqlx/mysql"]
sqlx-sqlite = ["sqlx", "sqlx/sqlite"]
# Enable all sqlx backends
sqlx-all = ["sqlx-postgres", "sqlx-mysql", "sqlx-sqlite"]
