[package]
name = "dev-engineeringlabs-rustboot-datetime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "DateTime utilities: formatting and timezone handling"
keywords = ["datetime", "timestamp", "timezone"]
categories = ["date-and-time"]

[dependencies]
chrono = "0.4"
thiserror = { workspace = true }
