[package]
name = "dev-engineeringlabs-rustboot-debug"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Development debugging utilities for rustboot (disabled in production)"
keywords = ["debug", "development", "diagnostics", "introspection"]
categories = ["development-tools::debugging"]

[features]
default = []
http = ["dep:rustboot-middleware", "dep:rustboot-http"]
database = ["dep:rustboot-database"]
state-machine = ["dep:rustboot-state-machine"]
di = ["dep:rustboot-di"]
config = ["dep:rustboot-config", "dep:serde", "dep:serde_json"]
all = ["http", "database", "state-machine", "di", "config"]

[dependencies]
async-trait.workspace = true
tracing.workspace = true
thiserror.workspace = true
tokio = { version = "1.0", features = ["time"] }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

# Optional dependencies for specific features
rustboot-middleware = { path = "../rustboot-middleware", package = "dev-engineeringlabs-rustboot-middleware", optional = true }
rustboot-http = { path = "../rustboot-http", package = "dev-engineeringlabs-rustboot-http", optional = true }
rustboot-database = { path = "../rustboot-database", package = "dev-engineeringlabs-rustboot-database", optional = true }
rustboot-state-machine = { path = "../rustboot-state-machine", package = "dev-engineeringlabs-rustboot-state-machine", optional = true }
rustboot-di = { path = "../rustboot-di", package = "dev-engineeringlabs-rustboot-di", optional = true }
rustboot-config = { path = "../rustboot-config", package = "dev-engineeringlabs-rustboot-config", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util", "macros"] }
tracing-subscriber = "0.3"
serde.workspace = true
serde_json.workspace = true

[[example]]
name = "debug_example"
required-features = ["all"]
