[package]
name = "dev-engineeringlabs-rustboot-di"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Dependency injection container"
keywords = ["di", "dependency-injection", "container"]
categories = ["data-structures"]

[dependencies]
rustboot-macros = { path = "../rustboot-macros" }
# Pure DI - no external dependencies
