[package]
name = "rustboot-error"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Error handling utilities for Rust applications"
repository = "https://github.com/sweengineeringlabs/rustboot"
keywords = ["error", "handling", "utilities", "context"]
categories = ["rust-patterns", "development-tools"]

[dependencies]
thiserror = "1.0"

[dev-dependencies]
