[package]
name = "dev-engineeringlabs-rustboot-health"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Health check infrastructure with liveness and readiness probes"
keywords = ["health", "healthcheck", "observability"]
categories = ["web-programming", "development-tools::debugging"]

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1.0", features = ["sync", "time", "rt", "net"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
