[package]
name = "dev-engineeringlabs-rustboot-http"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "HTTP client abstraction"
keywords = ["http", "client"]
categories = ["network-programming"]

[features]
default = []
reqwest = ["dep:reqwest"]

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rustboot-macros = { path = "../rustboot-macros" }
reqwest = { version = "0.12", features = ["json"], optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util", "macros", "rt-multi-thread"] }
wiremock = "0.6"
rustboot-macros = { path = "../rustboot-macros" }
serde_json = { workspace = true }
