[package]
name = "dev-engineeringlabs-rustboot-middleware"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Middleware pipeline pattern"
keywords = ["middleware", "pipeline"]
categories = ["web-programming"]

[features]
default = []
ratelimit = ["dep:rustboot-ratelimit", "dep:tokio"]

[dependencies]
async-trait.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
tokio = { version = "1.0", features = ["sync"], optional = true }
rustboot-ratelimit = { path = "../rustboot-ratelimit", package = "dev-engineeringlabs-rustboot-ratelimit", optional = true }
regex = "1.10"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
tracing-subscriber = "0.3"
