[package]
name = "dev-engineeringlabs-rustboot-observability"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Observability - metrics, logging, tracing"
keywords = ["observability", "metrics", "logging"]
categories = ["development-tools::debugging"]

[dependencies]
rustboot-macros = { path = "../rustboot-macros" }
tracing = { workspace = true }
uuid = { workspace = true }
