[package]
name = "dev-engineeringlabs-rustboot-openapi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "OpenAPI/Swagger documentation generation for Rustboot framework"
keywords = ["openapi", "swagger", "api", "documentation"]
categories = ["web-programming", "api-bindings"]

[features]
default = []
utoipa = ["dep:utoipa"]
swagger-ui = ["dep:utoipa-swagger-ui"]
yaml = ["dep:serde_yaml"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rustboot-macros = { path = "../rustboot-macros" }
utoipa = { version = "5.3", optional = true, features = ["preserve_order"] }
utoipa-swagger-ui = { version = "8.0", optional = true }
serde_yaml = { version = "0.9", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util", "macros", "rt-multi-thread"] }
serde_json.workspace = true
