[package]
name = "dev-engineeringlabs-rustboot-parsing"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Document parsing and analysis utilities for Markdown, HTML, and other formats"
keywords = ["parsing", "markdown", "document", "analysis"]
categories = ["parsing", "text-processing"]

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
