[package]
name = "dev-engineeringlabs-rustboot-ratelimit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Rate limiting with token bucket and leaky bucket algorithms"
keywords = ["ratelimit", "throttle", "rate"]
categories = ["asynchronous"]

[dependencies]
tokio = { workspace = true, features = ["time", "sync"] }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
