[package]
name = "dev-engineeringlabs-rustboot-resilience"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Resilience patterns: retry, circuit breaker, timeout"
keywords = ["resilience", "retry", "circuit-breaker"]
categories = ["asynchronous"]

[dependencies]
rustboot-macros = { path = "../rustboot-macros" }
tokio = { workspace = true, features = ["time", "sync"] }
thiserror = { workspace = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }

[features]
default = []
serde = ["dep:serde"]
