[package]
name = "dev-engineeringlabs-rustboot-security"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Security utilities: authentication, authorization, secrets, and auditing"
keywords = ["security", "auth", "authz", "secrets", "audit"]
categories = ["authentication", "cryptography"]

[dependencies]
rustboot-macros = { path = "../rustboot-macros" }
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
# Error handling
thiserror = { workspace = true }
