[package]
name = "dev-engineeringlabs-rustboot-serialization"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Serialization helpers for JSON, MessagePack, CSV, and YAML"
keywords = ["serialization", "json", "csv", "yaml"]
categories = ["encoding"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
csv = "1.3"
rmp-serde = "1.3"
thiserror = { workspace = true }

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
proptest = "1.5"
proptest-derive = "0.5"
