[package]
name = "dev-engineeringlabs-rustboot-session"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Session management abstraction with multiple storage backends"
keywords = ["session", "middleware", "authentication"]
categories = ["web-programming", "authentication"]

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
tracing.workspace = true

# Optional dependencies for storage backends
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"], optional = true }
tokio = { workspace = true, features = ["sync", "time", "rt", "macros"], optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber.workspace = true

[features]
default = ["memory"]
memory = ["tokio"]
redis-store = ["redis", "tokio"]
