[package]
name = "dev-engineeringlabs-rustboot-streams"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Async stream utilities for event-driven architectures"
keywords = ["streams", "async", "events", "tokio"]
categories = ["asynchronous"]

[dependencies]
futures-core = "0.3"
tokio = { version = "1.0", features = ["sync"] }
tokio-stream = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util", "macros"] }
futures = "0.3"
